# veritio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  biome.json  package.json  tsconfig.base.json
.claude/: claude-security-guidance.md  launch.json  settings.json
.claude-plugin/: marketplace.json
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: README.md
cli/: README.md  package.json  tsconfig.json
docs/: README.md  agent-audit-canvas.html  agent-audit-visualization.html  agent-setup.md  ai-integration.md  architecture.md  implementation-plan.md  integrations.md  name-research.md  product-brief.md  product-split.md  release-checklist.md  repo-map.md  repository-spec.md  review-backlog.md  risk-scoring.md  split-orchestration.md
examples/: README.md
examples/fastapi-governed-crud/: Dockerfile  README.md  pyproject.toml
examples/fastapi-governed-crud/app/: __init__.py  main.py
examples/fastapi-governed-crud/tests/: test_app.py
gateway/: DESIGN.md  Dockerfile  README.md  package.json
outputs/: veritio-first-customer-finder-report.html
scripts/: release-npm.sh  verify-example-docker.sh  verify-examples.sh  verify-nextjs-browser.mjs  verify-split.sh  verify-workbench-browser.mjs
sdks/python/: README.md  pyproject.toml
sdks/python/src/veritio/: __init__.py  event.py  governed_change.py  risk.py  risk_policy.py  templates.py
sdks/python/tests/: test_event.py  test_governed_change.py  test_risk.py
spec/: ai-gateway-capture.md  audit-record.schema.json  (+11 more)
(+410 files in other folders)
